Make Demo App depending on local react native sdk

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,5 +32,6 @@ repositories {
 
 dependencies {
     compile 'com.facebook.react:react-native:+'
+    compile 'com.amplitude:android-sdk:2.28.2'
 }
   
