--- a/example/android/settings.gradle
+++ b/example/android/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'ExampleApp'
+include ':amplitude_react-native'
+project(':amplitude_react-native').projectDir = new File(rootProject.projectDir, '../node_modules/@amplitude/react-native/android')
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
