--- a/example/package.json
+++ b/example/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "@amplitude/react-native": "file:.."
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
