Add all constructors and base methods pre bridge

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,5 +20,8 @@
     "@typescript-eslint",
     "prettier",
     "@amplitude/eslint-plugin-amplitude"
-  ]
+  ],
+  "rules": {
+    "@typescript-eslint/no-floating-promises": 0
+  }
 }
