--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "es6",
+    "module": "esnext",
     "declaration": true,
     "rootDir": "./src",
     "outDir": "./dist",
@@ -10,7 +10,8 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
-    "noEmitOnError": true
+    "noEmitOnError": true,
+    "lib": ["esnext"]
   },
   "include": ["./src/**/*"],
   "exclude": ["node_modules", "dist", "**/__tests__/*"]
