(build): Move library to using react native builder bob

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -55,4 +55,5 @@ repositories {
 dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation "com.amplitude:android-sdk:2.30.0"
 }
