--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -2,13 +2,14 @@ require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
 platform :ios, '10.0'
+use_modular_headers!
 
 target 'ReactNativeExample' do
   config = use_native_modules!
 
   use_react_native!(:path => config["reactNativePath"])
 
-      pod 'amplitude-react-native', :path => '../..'
+  pod 'amplitude-react-native', :path => '../..'
   
   # Enables Flipper.
   #
