Add proper gitignore for new project structure

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,27 +1,15 @@
 {
-  "env": {
-    "react-native/react-native": true
-  },
-  "extends": [
-    "plugin:react-native/all",
-    "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:@typescript-eslint/recommended-requiring-type-checking",
-    "plugin:prettier/recommended"
-  ],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "project": "./tsconfig.json",
-    "ecmaVersion": 2018,
-    "sourceType": "module"
-  },
-  "plugins": [
-    "react-native",
-    "@typescript-eslint",
-    "prettier",
-    "@amplitude/eslint-plugin-amplitude"
-  ],
+  "root": true,
+  "extends": ["@react-native-community", "prettier"],
   "rules": {
-    "@typescript-eslint/no-floating-promises": 0
+    "prettier/prettier": [
+      "error",
+      {
+        "printWidth": 80,
+        "proseWrap": "always",
+        "singleQuote": true,
+        "trailingComma": "all"
+      }
+    ]
   }
 }
