--- a/example/app.json
+++ b/example/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "ExampleApp",
-  "displayName": "ExampleApp"
+  "name": "ReactNativeExample",
+  "displayName": "ReactNative Example"
 }
