--- a/package.json
+++ b/package.json
@@ -1,47 +1,84 @@
 {
   "name": "@amplitude/react-native",
-  "version": "1.0.0",
-  "description": "Offical Amplitude SDK for React Native",
-  "repository": "git://github.com/amplitude/Amplitude-ReactNative.git",
-  "homepage": "https://github.com/amplitude/Amplitude-ReactNative",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "version": "0.1.0",
+  "description": "Official React Native SDK",
+  "main": "lib/commonjs/index",
+  "module": "lib/module/index",
+  "types": "lib/typescript/src/index.d.ts",
+  "react-native": "src/index",
+  "source": "src/index",
   "files": [
-    "dist/**/*"
+    "src",
+    "lib",
+    "android",
+    "ios",
+    "cpp",
+    "amplitude-react-native.podspec",
+    "!lib/typescript/example",
+    "!android/build",
+    "!ios/build",
+    "!**/__tests__",
+    "!**/__fixtures__",
+    "!**/__mocks__"
   ],
   "scripts": {
-    "build": "yarn run prettier && yarn run lint && tsc --project ./tsconfig.json",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prettier": "prettier --check \"{src,example}/**/*.{js,jsx,ts,tsx,json}\"",
-    "prettier:fix": "prettier --write \"{src,example}/**/*.{js,jsx,ts,tsx,json}\"",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix .",
-    "format": "yarn run prettier:fix && yarn run lint:fix"
+    "test": "jest",
+    "typescript": "tsc --noEmit",
+    "lint": "eslint \"**/*.{js,jsx,ts,tsx}\"",
+    "lint:fix": "eslint --fix \"**/*.{js,jsx,ts,tsx}\"",
+    "prettier": "prettier --check \"**/*.{js,jsx,ts,tsx,json}\"",
+    "prettier:fix": "prettier --write \"**/*.{js,jsx,ts,tsx,json}\"",
+    "prepare": "bob build",
+    "release": "release-it",
+    "example": "yarn --cwd example",
+    "pods": "cd example && pod-install --quiet",
+    "bootstrap": "yarn example && yarn && yarn pods"
   },
   "keywords": [
-    "react-native"
+    "react-native",
+    "ios",
+    "android"
   ],
-  "author": "Amplitude Inc",
+  "repository": "https://github.com/amplitude/Amplitude-ReactNative",
+  "author": "Amplitude Inc. <sdk.dev@amplitude.com> (https://github.com/amplitude)",
   "license": "MIT",
-  "peerDependencies": {
-    "react-native": "^0.63.0"
+  "bugs": {
+    "url": "https://github.com/amplitude/Amplitude-ReactNative/issues"
+  },
+  "homepage": "https://github.com/amplitude/Amplitude-ReactNative#readme",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
-    "@amplitude/eslint-plugin-amplitude": "^1.0.1",
     "@react-native-community/eslint-config": "^2.0.0",
-    "@types/react-native": "^0.63.0",
-    "@typescript-eslint/eslint-plugin": "^4.13.0",
-    "@typescript-eslint/parser": "^4.13.0",
-    "eslint": "^7.18.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react-native": "^3.10.0",
-    "husky": "^4.3.7",
-    "lint-staged": "^10.5.3",
-    "prettier": "^2.2.1",
-    "react": "^17.0.1",
-    "react-native": "^0.63.0",
-    "typescript": "^4.1.3"
+    "@release-it/conventional-changelog": "^2.0.0",
+    "@types/jest": "^26.0.0",
+    "@types/react": "^16.9.19",
+    "@types/react-native": "0.62.13",
+    "eslint": "^7.2.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "husky": "^4.2.5",
+    "jest": "^26.0.1",
+    "pod-install": "^0.1.0",
+    "prettier": "^2.0.5",
+    "react": "16.13.1",
+    "react-native": "0.63.4",
+    "react-native-builder-bob": "^0.17.1",
+    "release-it": "^14.2.2",
+    "typescript": "^4.1.3",
+    "lint-staged": "^10.5.3"
+  },
+  "peerDependencies": {
+    "react": "*",
+    "react-native": "*"
+  },
+  "jest": {
+    "preset": "react-native",
+    "modulePathIgnorePatterns": [
+      "<rootDir>/example/node_modules",
+      "<rootDir>/lib/"
+    ]
   },
   "husky": {
     "hooks": {
@@ -49,12 +86,43 @@
     }
   },
   "lint-staged": {
-    "{src,example}/**/*.{js,jsx,ts,tsx}": [
+    "**/*.{js,jsx,ts,tsx}": [
       "prettier --write",
       "eslint --fix"
     ],
-    "{src,example}/**/*.{json}": [
+    "**/*.{json}": [
       "prettier --write"
+    ]
+  },
+  "release-it": {
+    "git": {
+      "commitMessage": "chore: release ${version}",
+      "tagName": "v${version}"
+    },
+    "npm": {
+      "publish": true
+    },
+    "github": {
+      "release": true
+    },
+    "plugins": {
+      "@release-it/conventional-changelog": {
+        "preset": "angular"
+      }
+    }
+  },
+  "react-native-builder-bob": {
+    "source": "src",
+    "output": "lib",
+    "targets": [
+      "commonjs",
+      "module",
+      [
+        "typescript",
+        {
+          "project": "tsconfig.build.json"
+        }
+      ]
     ]
   }
 }
