--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -3,6 +3,7 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '10.0'
 use_modular_headers!
+use_frameworks!
 
 target 'ReactNativeExample' do
   config = use_native_modules!
@@ -10,13 +11,4 @@ target 'ReactNativeExample' do
   use_react_native!(:path => config["reactNativePath"])
 
   pod 'amplitude-react-native', :path => '../..'
-  
-  # Enables Flipper.
-  #
-  # Note that if you have use_frameworks! enabled, Flipper will not work and
-  # you should disable these next few lines.
-  use_flipper!
-  post_install do |installer|
-    flipper_post_install(installer)
-  end
 end
