--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "react-native-elements": "^3.2.0",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-vector-icons": "^8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
