--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "release": "release-it",
     "example": "yarn --cwd example",
     "pods": "cd example && pod-install --quiet",
-    "bootstrap": "yarn example && yarn && yarn pods"
+    "bootstrap": "yarn example && yarn && yarn pods",
+    "gen-docs": "typedoc --tsconfig ./tsconfig.build.json"
   },
   "keywords": [
     "react-native",
@@ -60,14 +61,16 @@
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
+    "lint-staged": "^10.5.3",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-builder-bob": "^0.17.1",
     "release-it": "^14.2.2",
-    "typescript": "^4.1.3",
-    "lint-staged": "^10.5.3"
+    "typedoc": "^0.20.28",
+    "typedoc-plugin-markdown": "^3.6.0",
+    "typescript": "^4.1.3"
   },
   "peerDependencies": {
     "react": "*",
