--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,5 +1,12 @@
-
 {
   "extends": "./tsconfig",
-  "exclude": ["example"]
+  "exclude": ["example"],
+  "typedocOptions": {
+    "plugin": ["typedoc-plugin-markdown"],
+    "entryPoints": ["./src/index.ts"],
+    "exclude": ["./src/types.ts", "./src/__tests__/**/*"],
+    "excludePrivate": true,
+    "entryDocument": "",
+    "disableSources": true
+  }
 }
