--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -6,7 +6,7 @@
     "entryPoints": ["./src/index.ts"],
     "exclude": ["./src/types.ts", "./src/__tests__/**/*"],
     "excludePrivate": true,
-    "entryDocument": "",
+    "entryDocument": "./LIBRARY.md",
     "disableSources": true
   }
 }
