chore: Override default naming

--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
       "publish": true
     },
     "github": {
+      "releaseName": "${version}",
       "release": true
     },
     "plugins": {
