--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "example": "yarn --cwd example",
     "pods": "cd example && pod-install --quiet",
     "bootstrap": "yarn example && yarn && yarn pods",
-    "create-docs": "typedoc --tsconfig ./tsconfig.build.json",
+    "create-docs": "typedoc --tsconfig ./tsconfig.build.json --theme './node_modules/typedoc-neo-theme'",
     "gen-docs": "rm -rf docs && yarn run create-docs && git add docs"
   },
   "keywords": [
@@ -70,7 +70,7 @@
     "react-native-builder-bob": "^0.17.1",
     "release-it": "^14.2.2",
     "typedoc": "^0.20.28",
-    "typedoc-plugin-markdown": "^3.6.0",
+    "typedoc-neo-theme": "^1.1.0",
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
