ci: minor fixes

--- a/package.json
+++ b/package.json
@@ -2,12 +2,25 @@
   "name": "@amplitude/react-native",
   "version": "2.0.6",
   "description": "Official React Native SDK",
-  "files": ["lib/**"],
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/src/index.d.ts",
   "react-native": "src/index",
   "source": "src/index",
+  "files": [
+    "src",
+    "lib",
+    "android",
+    "ios",
+    "cpp",
+    "amplitude-react-native.podspec",
+    "!lib/typescript/example",
+    "!android/build",
+    "!ios/build",
+    "!**/__tests__",
+    "!**/__fixtures__",
+    "!**/__mocks__"
+  ],
   "scripts": {
     "test": "jest",
     "typescript": "tsc --noEmit",
