--- a/package.json
+++ b/package.json
@@ -75,7 +75,6 @@
     "react-native-builder-bob": "^0.17.1",
     "semantic-release": "^17.4.1",
     "typedoc": "^0.20.28",
-    "typedoc-plugin-markdown": "^3.6.0",
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
@@ -118,6 +117,7 @@
     ]
   },
   "dependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.1.0",
+    "typedoc-neo-theme": "^1.1.0"
   }
 }
