--- a/package.json
+++ b/package.json
@@ -29,13 +29,12 @@
     "prettier": "prettier --check \"**/*.{js,jsx,ts,tsx,json}\"",
     "prettier:fix": "prettier --write \"**/*.{js,jsx,ts,tsx,json}\"",
     "prepare": "bob build",
+    "release": "release-it",
     "example": "yarn --cwd example",
     "pods": "cd example && pod-install --quiet",
     "bootstrap": "yarn example && yarn && yarn pods",
-    "docs:create-docs": "typedoc --tsconfig ./tsconfig.build.json --theme './node_modules/typedoc-neo-theme'",
-    "docs:gen-docs": "rm -rf docs && yarn run docs:create-docs && git add docs",
-    "docs:deploy": "gh-pages -d docs",
-    "release": "semantic-release"
+    "create-docs": "typedoc --tsconfig ./tsconfig.build.json",
+    "gen-docs": "rm -rf docs && yarn run create-docs && git add docs"
   },
   "keywords": [
     "react-native",
@@ -54,11 +53,7 @@
   },
   "devDependencies": {
     "@react-native-community/eslint-config": "^2.0.0",
-    "@semantic-release/commit-analyzer": "^8.0.1",
-    "@semantic-release/git": "^9.0.0",
-    "@semantic-release/github": "^7.2.0",
-    "@semantic-release/npm": "^7.0.10",
-    "@semantic-release/release-notes-generator": "^9.0.2",
+    "@release-it/conventional-changelog": "^2.0.0",
     "@types/jest": "^26.0.0",
     "@types/react": "^16.9.19",
     "@types/react-native": "0.62.13",
@@ -73,8 +68,9 @@
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-builder-bob": "^0.17.1",
-    "semantic-release": "^17.4.1",
+    "release-it": "^14.2.2",
     "typedoc": "^0.20.28",
+    "typedoc-plugin-markdown": "^3.6.0",
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
@@ -102,6 +98,24 @@
       "prettier --write"
     ]
   },
+  "release-it": {
+    "git": {
+      "commitMessage": "chore: release ${version}",
+      "tagName": "v${version}"
+    },
+    "npm": {
+      "publish": true
+    },
+    "github": {
+      "releaseName": "${version}",
+      "release": true
+    },
+    "plugins": {
+      "@release-it/conventional-changelog": {
+        "preset": "angular"
+      }
+    }
+  },
   "react-native-builder-bob": {
     "source": "src",
     "output": "lib",
@@ -115,9 +129,5 @@
         }
       ]
     ]
-  },
-  "dependencies": {
-    "gh-pages": "^3.1.0",
-    "typedoc-neo-theme": "^1.1.0"
   }
 }
