--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,12 @@
 name: Build
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
@@ -8,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         node-version: [12.x, 14.x]
-        os: [macOS-latest] # TODO(kelson): add ubuntu-18.04 or ubuntu-latest when getting closer to release
+        os: [macOS-latest, ubuntu-latest]
     runs-on: ${{ matrix.os }}
 
     steps:
