--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@amplitude/react-native",
-  "version": "2.0.10",
+  "version": "2.0.9",
   "description": "Official React Native SDK",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -29,12 +29,13 @@
     "prettier": "prettier --check \"**/*.{js,jsx,ts,tsx,json}\"",
     "prettier:fix": "prettier --write \"**/*.{js,jsx,ts,tsx,json}\"",
     "prepare": "bob build",
-    "release": "release-it",
     "example": "yarn --cwd example",
     "pods": "cd example && pod-install --quiet",
     "bootstrap": "yarn example && yarn && yarn pods",
-    "create-docs": "typedoc --tsconfig ./tsconfig.build.json",
-    "gen-docs": "rm -rf docs && yarn run create-docs && git add docs"
+    "docs:create-docs": "typedoc --tsconfig ./tsconfig.build.json --theme './node_modules/typedoc-neo-theme'",
+    "docs:gen-docs": "rm -rf docs && yarn run docs:create-docs && git add docs",
+    "docs:deploy": "gh-pages -d docs",
+    "release": "semantic-release"
   },
   "keywords": [
     "react-native",
@@ -53,7 +54,11 @@
   },
   "devDependencies": {
     "@react-native-community/eslint-config": "^2.0.0",
-    "@release-it/conventional-changelog": "^2.0.0",
+    "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/github": "^7.2.0",
+    "@semantic-release/npm": "^7.0.10",
+    "@semantic-release/release-notes-generator": "^9.0.2",
     "@types/jest": "^26.0.0",
     "@types/react": "^16.9.19",
     "@types/react-native": "0.62.13",
@@ -68,9 +73,8 @@
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-builder-bob": "^0.17.1",
-    "release-it": "^14.2.2",
+    "semantic-release": "^17.4.1",
     "typedoc": "^0.20.28",
-    "typedoc-plugin-markdown": "^3.6.0",
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
@@ -98,24 +102,6 @@
       "prettier --write"
     ]
   },
-  "release-it": {
-    "git": {
-      "commitMessage": "chore: release ${version}",
-      "tagName": "v${version}"
-    },
-    "npm": {
-      "publish": true
-    },
-    "github": {
-      "releaseName": "${version}",
-      "release": true
-    },
-    "plugins": {
-      "@release-it/conventional-changelog": {
-        "preset": "angular"
-      }
-    }
-  },
   "react-native-builder-bob": {
     "source": "src",
     "output": "lib",
@@ -129,5 +115,9 @@
         }
       ]
     ]
+  },
+  "dependencies": {
+    "gh-pages": "^3.1.0",
+    "typedoc-neo-theme": "^1.1.0"
   }
 }
