--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@amplitude/react-native",
-  "version": "2.0.9",
+  "version": "2.0.10",
   "description": "Official React Native SDK",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -35,7 +35,8 @@
     "docs:create-docs": "typedoc --tsconfig ./tsconfig.build.json --theme './node_modules/typedoc-neo-theme'",
     "docs:gen-docs": "rm -rf docs && yarn run docs:create-docs && git add docs",
     "docs:deploy": "gh-pages -d docs",
-    "release": "semantic-release"
+    "release": "semantic-release",
+    "release-temp": "release-it"
   },
   "keywords": [
     "react-native",
@@ -101,6 +102,23 @@
     "**/*.{json}": [
       "prettier --write"
     ]
+  },
+  "release-it": {
+    "git": {
+      "commitMessage": "chore: release ${version}",
+      "tagName": "v${version}"
+    },
+    "npm": {
+      "publish": true
+    },
+    "github": {
+      "release": true
+    },
+    "plugins": {
+      "@release-it/conventional-changelog": {
+        "preset": "angular"
+      }
+    }
   },
   "react-native-builder-bob": {
     "source": "src",
