--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Build Multiple RN versions
 
 on:
   push:
@@ -14,6 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         node-version: [12.x, 14.x]
+        react-native-version: [0.64, 0.63, 0.62, 0.61]
         os: [macOS-latest, ubuntu-latest]
     runs-on: ${{ matrix.os }}
 
@@ -25,6 +26,11 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+
+      - name: Install RN Version
+        run:
+          cd example && yarn upgrade react-native@${{
+          matrix.react-native-version }}
 
       - name: Build library and example app
         run: yarn
