--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-prettier": "^3.1.3",
+    "gh-pages": "3.1.0",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
     "lint-staged": "^10.5.3",
@@ -69,6 +70,7 @@
     "react-native-builder-bob": "^0.17.1",
     "semantic-release": "^17.4.1",
     "typedoc": "^0.20.28",
+    "typedoc-neo-theme": "^1.1.0",
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
@@ -126,9 +128,5 @@
         }
       ]
     ]
-  },
-  "dependencies": {
-    "gh-pages": "^3.1.0",
-    "typedoc-neo-theme": "^1.1.0"
   }
 }
