--- a/package.json
+++ b/package.json
@@ -12,14 +12,7 @@
     "lib",
     "android",
     "ios",
-    "cpp",
-    "skylab-reactnative-client.podspec",
-    "!lib/typescript/example",
-    "!android/build",
-    "!ios/build",
-    "!**/__tests__",
-    "!**/__fixtures__",
-    "!**/__mocks__"
+    "amplitude-react-native.podspec"
   ],
   "scripts": {
     "test": "jest",
