--- a/.github/workflows/jira-issue-create.yml
+++ b/.github/workflows/jira-issue-create.yml
@@ -26,8 +26,8 @@ jobs:
           summary: |
             [SDK - ReactNative] ${{ github.event.issue.title }}
           description: |
-            ${{ github.event.issue.url}}
-          fields: '{"customfield_10006": 1039, "customfield_11481": {"value": "Data Management"}, "customfield_11200": {"value": "SDK"}}' # sprint, pillar, pod
+            ${{ github.event.issue.html_url }}
+          fields: '{"customfield_10006": 1039, "customfield_11481": {"value": "Data Connections 🚇"}, "customfield_11200": {"value": "SDK"}}' # sprint, pillar, pod
 
       - name: Log created issue
         run: echo "Issue AMP-${{ steps.create.outputs.issue }} was created"
