--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   authorize: 
     name: Authorize
-    runs-on: ubuntu-18.04 
+    runs-on: macos-10.15 
     steps:
       - name: ${{ github.actor }} permission check to do a release
         uses: octokit/request-action@v2.0.0
@@ -22,8 +22,12 @@ jobs:
 
   release:
     name: Release
-    runs-on: ubuntu-18.04 
+    runs-on: macos-10.15
     needs: [authorize]
+    strategy:
+      matrix:
+        ruby-version: ["2.7.x"]
+        node-version: ["12.x"]
     env:
       GIT_AUTHOR_NAME: amplitude-sdk-bot
       GIT_AUTHOR_EMAIL: amplitude-sdk-bot@users.noreply.github.com
@@ -32,7 +36,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2 
+        uses: actions/checkout@v2
 
       - name: node_modules cache
         uses: actions/cache@v2
@@ -43,13 +47,33 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2.1.5
         with:
-          node-version: 12.x
+          node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
       - name: Build
         run: yarn prepare
+
+      - name: Setup Ruby
+        uses: actions/setup-ruby@v1
+        with:
+          ruby-version: ${{ matrix.ruby-version }}
+
+      - name: Cache Bundle Gems and Cocoapods
+        id: cache-gems-pods
+        uses: actions/cache@v2
+        with:
+          path: |
+            Pods
+            vendor/bundle
+          key: ${{ runner.os }}-ruby-${{ matrix.ruby-version }}-gems-${{ hashFiles('**/Gemfile.lock') }}-pods-${{ hashFiles('**/Podfile.lock') }}
+
+      - name: Install Cocoapods
+        if: steps.cache-gems-pods.outputs.cache-hit != 'true'
+        run: |
+          gem install bundler
+          bundle config path vendor/bundle
 
       - name: Release --dry-run  # Uses release.config.js
         if: ${{ github.event.inputs.dryRun == 'true'}}
