--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@release-it/conventional-changelog": "^2.0.1",
     "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/exec": "^5.0.0",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.2.0",
     "@semantic-release/npm": "^7.0.10",
@@ -132,8 +133,5 @@
         }
       ]
     ]
-  },
-  "dependencies": {
-    "@semantic-release/exec": "^5.0.0"
   }
 }
