ci: undo pods script, build new pods lockfile

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "prettier:fix": "prettier --write \"**/*.{js,jsx,ts,tsx,json}\"",
     "prepare": "bob build",
     "example": "yarn --cwd example",
-    "pods": "cd example && pod-install --repo-update --quiet",
+    "pods": "cd example && pod-install --quiet",
     "update-example-pod-lockfile": "yarn example install --frozen-lockfile && yarn pods",
     "bootstrap": "yarn example && yarn && yarn pods",
     "docs:create-docs": "typedoc --tsconfig ./tsconfig.build.json --theme './node_modules/typedoc-neo-theme'",
