--- a/android/build.gradle
+++ b/android/build.gradle
@@ -55,5 +55,5 @@ repositories {
 dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
-    implementation "com.amplitude:android-sdk:2.37.0"
+    implementation "com.amplitude:android-sdk:2.37.0" // TODO(marvin): need to update after android SDK change is merged and released
 }
