chore: bump dependencies ro remediate critical and high Dependabot vulns

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "pods": "cd example && pod-install --quiet",
     "update-example-pod-lockfile": "yarn example install --frozen-lockfile && yarn pods",
     "bootstrap": "yarn example && yarn && yarn pods",
-    "docs:create-docs": "typedoc --tsconfig ./tsconfig.build.json --theme './node_modules/typedoc-neo-theme'",
+    "docs:create-docs": "typedoc --tsconfig ./tsconfig.build.json",
     "docs:gen-docs": "rm -rf docs && yarn run docs:create-docs && git add docs",
     "docs:deploy": "gh-pages -d docs",
     "release": "semantic-release"
@@ -47,33 +47,32 @@
     "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
-    "@google/semantic-release-replace-plugin": "^1.0.2",
+    "@google/semantic-release-replace-plugin": "^1.2.0",
     "@react-native-community/eslint-config": "^2.0.0",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/exec": "^5.0.0",
-    "@semantic-release/git": "^9.0.0",
-    "@semantic-release/github": "^7.2.0",
-    "@semantic-release/npm": "^7.0.10",
-    "@semantic-release/release-notes-generator": "^9.0.2",
-    "@types/jest": "^26.0.0",
-    "@types/react": "^16.9.19",
-    "@types/react-native": "0.62.13",
-    "eslint": "^7.2.0",
-    "eslint-config-prettier": "^7.0.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "gh-pages": "3.1.0",
-    "husky": "^4.2.5",
-    "jest": "^26.0.1",
-    "lint-staged": "^10.5.3",
-    "pod-install": "^0.1.0",
-    "prettier": "^2.0.5",
-    "react": "16.13.1",
-    "react-native": "0.63.4",
-    "react-native-builder-bob": "^0.17.1",
-    "semantic-release": "^17.4.1",
-    "typedoc": "^0.20.28",
-    "typedoc-neo-theme": "^1.1.0",
-    "typescript": "^4.1.3"
+    "@semantic-release/git": "^9.0.1",
+    "@semantic-release/github": "^7.2.3",
+    "@semantic-release/npm": "^9.0.2",
+    "@semantic-release/release-notes-generator": "^9.0.3",
+    "@types/jest": "^26.0.24",
+    "@types/react": "^16.14.35",
+    "@types/react-native": "0.62.18",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "gh-pages": "3.2.3",
+    "husky": "^4.3.8",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.4",
+    "pod-install": "^0.1.38",
+    "prettier": "^2.8.5",
+    "react": "17.0.2",
+    "react-native": "0.68.6",
+    "react-native-builder-bob": "^0.20.4",
+    "semantic-release": "^19.0.5",
+    "typedoc": "^0.23.28",
+    "typescript": "^4.9.5"
   },
   "peerDependencies": {
     "react": "*",
