--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -3,7 +3,7 @@
   "exclude": ["example"],
   "typedocOptions": {
     "entryPoints": ["./src/index.ts"],
-    "exclude": ["./src/types.ts", "./src/__tests__/**/*"],
+    "exclude": ["./src/__tests__/**/*"],
     "excludePrivate": true,
     "readme": "README.md",
     "disableSources": true
