--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,6 +18,8 @@ def safeExtGet(prop, fallback) {
 }
 
 android {
+    namespace "com.amplitude.reactnative"
+
     compileSdkVersion safeExtGet('compileSdkVersion', 29)
     buildToolsVersion safeExtGet('buildToolsVersion', '29.0.2')
     defaultConfig {
